--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,6 @@
 /.ipynb_checkpoints
 /Graphs for Misc Examples/.ipynb_checkpoints
-/Graphs for Misc Examples/.ipynb_checkpoints
 /__pycache__
-/GLM - DDC v Sample Elasticity - Sec 4.2/.ipynb_checkpoints
-/Effective Sample Sizes - Sec 4.3/.ipynb_checkpoints
-/OLS Example Cases - Sec 4.1/.ipynb_checkpoints
-/OLS Example Cases - Sec 4.1/old
 /Section 4.2 - GLMs - DDC v Sample Elasticity/.ipynb_checkpoints
+/Section 4.1 - OLS Example Cases/.ipynb_checkpoints
 /Section 4.1 - OLS Example Cases/old
