--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,4 @@
 /Section 4.2 - GLMs - DDC v Sample Elasticity/.ipynb_checkpoints
 /Section 4.1 - OLS Example Cases/.ipynb_checkpoints
 /Section 4.1 - OLS Example Cases/old
+/Other
