Clean up section 4.3 code
idem.

--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,5 @@
 /Section 4.1 - OLS Example Cases/.ipynb_checkpoints
 /Section 4.1 - OLS Example Cases/old
 /Other
+/Section 4.3 - Effective Sample Sizes/.ipynb_checkpoints
+/Section 4.3 - Effective Sample Sizes/old
