Simplify and refactor simulation code
idem.

--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,9 @@
 /Other
 /Section 4.3 - Effective Sample Sizes/.ipynb_checkpoints
 /Section 4.3 - Effective Sample Sizes/old
+/checking
+/Utils/.ipynb_checkpoints
+/Utils/__pycache__
+/Section 4-Copy1.2 - GLMs - Data Defect Correlation vs Realized Efficiency
+/Section 4.2 - GLMs - Data Defect Correlation vs Realized Efficiency/.ipynb_checkpoints
+/Other Figures/Sec 2.2 - OLS - Data Defect Correlation vs Realized Efficiency/.ipynb_checkpoints
