bugfix system import
idem.

--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,5 @@
 /Section 4-Copy1.2 - GLMs - Data Defect Correlation vs Realized Efficiency
 /Section 4.2 - GLMs - Data Defect Correlation vs Realized Efficiency/.ipynb_checkpoints
 /Other Figures/Sec 2.2 - OLS - Data Defect Correlation vs Realized Efficiency/.ipynb_checkpoints
+/Other Figures/Sec 4.2 - GLM - Plotting the Observed Fisher Information and Derivatives/.ipynb_checkpoints
+/Other Figures/Sec 3.1 - OLS Decomposition - 3D Graph/.ipynb_checkpoints
